Improve the appearence of the display by making it smaller.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,7 +29,7 @@
 
     /*.portrait*/ canvas.screen {
         width: auto;
-        height: 100%;
+        height: 80%;
     }
 
     .rotated.letterboxed #positioner {
@@ -43,10 +43,9 @@
         padding-top: 100%;
         height: 0;
     }
-*/
 </style>
 
-<body class="fill-height">
+<body>
 
 <div id="positioner">
     <canvas class="screen" id="device-screen-canvas" style="border: 1px solid red;"></canvas>
