Added basic keyboard input support.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -43,11 +43,17 @@
         padding-top: 100%;
         height: 0;
     }
+
+    #input {
+        width: 0;
+        opacity: 0;
+    }
 </style>
 
 <body>
 
 <div id="positioner">
+    <input id="input" type="password" tabindex="40" accesskey="C" autocorrect="off" autocapitalize="off">
     <canvas class="screen" id="device-screen-canvas" style="border: 1px solid red;"></canvas>
 </div>
 
