More work on header.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,4 +60,6 @@
 </body>
 
 <script lang="javascript" src="js/scaler.js"></script>
+<script lang="javascript" src="js/rotator.js"></script>
+<script lang="javascript" src="js/imagepool.js"></script>
 <script lang="javascript" src="js/main.js"></script>
