Refactored the display object so that it starts in a popup.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,9 +5,9 @@
 
     <script language="javascript" src="js/b_main.js"></script>
     <script language="javascript">
-        window.onload = function () {
+        window.addEventListener("load", function () {
             JS.onLoad();
-        }
+        });
     </script>
 </head>
 
