Reworked the window sizing when opening.

--- a/src/html/display.html
+++ b/src/html/display.html
@@ -5,6 +5,10 @@
     <title>Remote Interface</title>
 
     <style>
+        body {
+            overflow: hidden;
+        }
+
         canvas.screen {
             position: absolute;
             width: 100%;
