--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,10 @@
 
 </div>
 
+<div id="info-virt">
+
+</div>
+
 <div id="display">
     <a href="javascript:JS.openDisplay()">OPEN THE FUCKING DISPLAY</a>
 </div>
