Improved the appearance of the title bar.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,8 +16,21 @@
 
 <body>
 
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                <img alt="Brand" src="images/opersys_land_logo.png">
+            </a>
+        </div>
+        <div class="navbar-text">
+            <h1>Remote Interface</h1>
+        </div>
+    </div>
+</nav>
+
 <div class="page-header">
-    <h1>Opersys Remote Interface<img src="images/opersys_land_logo.png" /></h1>
+
 </div>
 
 <div class="container">
