Improve the appareance of the index page in Firefox.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,7 +35,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="padding: 0px; margin: 10px;">
             <img width="320" id="previewImage" src="" onclick="JS.openDisplay()" />
         </div>
 
